# Workshop-ML-LLM

./: README.md  pyproject.toml
notebooks/: Analise de Dados e Treinamento.ipynb  MCP Client.ipynb  RAG.ipynb
