[project]
name = "workshop-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "openai>=2.20.0",
    "pandas>=2.3.3",
    "pypdf>=6.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.3",
]
